\bm to \boldsymbol

--- a/intro.ipynb
+++ b/intro.ipynb
@@ -7,12 +7,12 @@
     "# Shifted Linear Systems:\n",
     "\n",
     "\\begin{equation}\n",
-    "(\\bm A + \\sigma_i \\bm I) \\bm x(\\sigma_i) = \\bm b(\\sigma_i)\n",
+    "(\\boldsymbol A + \\sigma_i \\boldsymbol I) \\boldsymbol x(\\sigma_i) = \\boldsymbol b(\\sigma_i)\n",
     "\\end{equation}\n",
     "\n",
     "where\n",
     "\n",
-    "$\\bm A \\in \\mathbb C^{n \\times n}$\n",
+    "$\\boldsymbol A \\in \\mathbb C^{n \\times n}$\n",
     "\n",
     "$i = 1, 2, ..., L$\n",
     "\n",
@@ -33,7 +33,7 @@
    "metadata": {},
    "source": [
     "### Possible Solution:\n",
-    "When $\\bm A$ is *large* and *sparse*, matrix-free iterative methods are of interest, including **Krylov** subspace methods."
+    "When $\\boldsymbol A$ is *large* and *sparse*, matrix-free iterative methods are of interest, including **Krylov** subspace methods."
    ]
   },
   {
@@ -41,19 +41,19 @@
    "metadata": {},
    "source": [
     "#### Why Krylov? \n",
-    "The Krylov subspace ($\\mathcal{K}_j$) is *invariant* (does not change) under $\\bm A + \\sigma_i \\bm I$ (scalar shift of the coeﬃcient matrix).\n",
+    "The Krylov subspace ($\\mathcal{K}_j$) is *invariant* (does not change) under $\\boldsymbol A + \\sigma_i \\boldsymbol I$ (scalar shift of the coeﬃcient matrix).\n",
     "\n",
     "\\begin{equation}\n",
-    "\\mathcal{K}_j(\\bm A + {\\sigma_i}_1 \\bm I , \\bm u) = \\mathcal{K}_j(\\bm A + {\\sigma_i}_2 \\bm I , \\widetilde{\\bm u}) \\leftarrow Shift \\, Invariance\n",
+    "\\mathcal{K}_j(\\boldsymbol A + {\\sigma_i}_1 \\boldsymbol I , \\boldsymbol u) = \\mathcal{K}_j(\\boldsymbol A + {\\sigma_i}_2 \\boldsymbol I , \\widetilde{\\boldsymbol u}) \\leftarrow Shift \\, Invariance\n",
     "\\end{equation}\n",
     "\n",
     "where\n",
     "\n",
-    "$\\widetilde{\\bm u} = \\beta \\bm u$ ($\\beta \\neq 0$) $\\leftarrow Collinearity \\, Requirement$\n",
+    "$\\widetilde{\\boldsymbol u} = \\beta \\boldsymbol u$ ($\\beta \\neq 0$) $\\leftarrow Collinearity \\, Requirement$\n",
     "\n",
     "#### Obstacles:\n",
     "\n",
-    "Unrelated RHSs (${\\bm b(\\sigma_i)}_{i=1}^L$ not collinear) $\\rightarrow$ can't exploit the *shift invariance* property of Krylov subspace\n",
+    "Unrelated RHSs (${\\boldsymbol b(\\sigma_i)}_{i=1}^L$ not collinear) $\\rightarrow$ can't exploit the *shift invariance* property of Krylov subspace\n",
     "\n",
     "[22] $\\rightarrow$ for GMRES-type methods, we cannot simultaneously minimize all residuals while maintaining collinearity (ToDo)\n",
     "\n",
