--- a/prelim.ipynb
+++ b/prelim.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "### Krylov subspace for unshifted system\n",
     "\n",
-    "$\\bm{Ax} = \\bm b \\xrightarrow[\\text{ON basis}]{\\text Arnoldi} \\mathcal{K}_j(\\bm A , \\bm u) = \\text{span} \\{ \\bm u, \\bm{Au}, ..., \\bm A^{j-1} \\bm u \\}$ \n",
+    "$\\boldsymbol{Ax} = \\boldsymbol b \\xrightarrow[\\text{ON basis}]{\\text Arnoldi} \\mathcal{K}_j(\\boldsymbol A , \\boldsymbol u) = \\text{span} \\{ \\boldsymbol u, \\boldsymbol{Au}, ..., \\boldsymbol A^{j-1} \\boldsymbol u \\}$ \n",
     "\n",
     "<small>ON = Orthonormal</small>"
    ]
