--- a/warmup/arnoldi.ipynb
+++ b/warmup/arnoldi.ipynb
@@ -70,6 +70,7 @@
     "M = 60\n",
     "Q, H = arnoldi(A, b, M)\n",
     "res = zeros(M, 1)\n",
+    "# The Arnoldi bases are used to solve the least square problems defining the GMRES iterates\n",
     "for m in 1:M\n",
     "    s = vcat(norm(b), zeros(m, 1))\n",
     "    z = H[1:m+1, 1:m] \\ s\n",
@@ -93,7 +94,6 @@
     }
    ],
    "source": [
-    "# The columns of Km are becoming near-parallel → numerical cancellation\n",
     "plot(1:M, res, yaxis=:log, xlabel=:\"m\", ylabel=:\"||b-Ax_m||\")"
    ]
   },
