--- a/warmup/arnoldi.ipynb
+++ b/warmup/arnoldi.ipynb
@@ -57,7 +57,7 @@
     "λ =  [i+10 for i in 1:n]\n",
     "A_ = randn(n, n)\n",
     "A = UpperTriangular(A_) - diagm(diag(A_)) + diagm(λ)\n",
-    "b = randn(n, 1);"
+    "b = randn(n, 1); # some starting vector"
    ]
   },
   {
