--- a/warmup/arnoldi.ipynb
+++ b/warmup/arnoldi.ipynb
@@ -28,6 +28,8 @@
     }
    ],
    "source": [
+    "# Arnoldi process\n",
+    "#  u = some starting vector\n",
     "function arnoldi(A, u, m)\n",
     "    n = size(A, 1)\n",
     "    Q = zeros(n, m+1)\n",
@@ -57,7 +59,7 @@
     "λ =  [i+10 for i in 1:n]\n",
     "A_ = randn(n, n)\n",
     "A = UpperTriangular(A_) - diagm(diag(A_)) + diagm(λ)\n",
-    "b = randn(n, 1); # some starting vector"
+    "b = randn(n, 1);"
    ]
   },
   {
