--- a/warmup/gmres.ipynb
+++ b/warmup/gmres.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
        "my_gmres (generic function with 1 method)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,7 +32,7 @@
     "function my_gmres(A, b, m)\n",
     "    n = length(b)\n",
     "    Q = zeros(n, m+1)\n",
-    "    Q[:,1] = b/norm(b)\n",
+    "    Q[:,1] = b / norm(b)\n",
     "    H = zeros(m+1, m)\n",
     "\n",
     "    # Initial solution is zero.\n",
@@ -43,17 +43,17 @@
     "        # Next step of Arnoldi iteration.\n",
     "        v = A*Q[:, j]\n",
     "        for i in 1:j\n",
-    "            H[i, j] = dot(Q[:,i], v)\n",
-    "            v -= H[i, j]*Q[:, i]\n",
+    "            H[i, j] = dot(Q[:, i], v)\n",
+    "            v -= H[i, j] * Q[:, i]\n",
     "        end\n",
     "        H[j+1, j] = norm(v)\n",
-    "        Q[:, j+1] = v/H[j+1, j]\n",
+    "        Q[:, j+1] = v / H[j+1, j]\n",
     "\n",
-    "        # Solve the minimum residual problem.\n",
+    "        # Solve the minimum residual problem\n",
     "        r = [norm(b); zeros(j)]\n",
     "        z = H[1:j+1, 1:j] \\ r\n",
-    "        x = Q[:, 1:j]*z\n",
-    "        residual[j+1] = norm( A*x - b )\n",
+    "        x = Q[:, 1:j] * z\n",
+    "        residual[j+1] = norm(A*x - b)\n",
     "    end\n",
     "    return x, residual\n",
     "end"
