--- a/prelim.ipynb
+++ b/prelim.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "### Krylov subspace for unshifted system\n",
     "\n",
-    "$\\boldsymbol{Ax} = \\boldsymbol b \\xrightarrow[\\texttt{ON basis}]{\\texttt{Arnoldi}} \\mathcal{K}_j(\\boldsymbol A , \\boldsymbol u) = \\texttt{span} \\{ \\boldsymbol u, \\boldsymbol{Au}, ..., \\boldsymbol A^{j-1} \\boldsymbol u \\}$ \n",
+    "$\\mathbf{Ax} = \\mathbf b \\xrightarrow[\\texttt{ON basis}]{\\texttt{Arnoldi}} \\mathcal{K}_j(\\mathbf A , \\mathbf u) = \\texttt{span} \\{ \\mathbf u, \\mathbf{Au}, ..., \\mathbf A^{j-1} \\mathbf u \\}$ \n",
     "\n",
     "<small>ON = Orthonormal</small>"
    ]
@@ -28,23 +28,23 @@
    "metadata": {},
    "source": [
     "### Arnoldi relation:\n",
-    "$\\boldsymbol{A} \\boldsymbol{V}_j = \\boldsymbol{V}_{j+1} \\boldsymbol{\\overline{H}}_j$\n",
+    "$\\mathbf{A} \\mathbf{V}_j = \\mathbf{V}_{j+1} \\mathbf{\\overline{H}}_j$\n",
     "\n",
     "where\n",
     "\n",
-    "$\\boldsymbol{\\overline{H}}_j \\in \\mathbb C^{(j+1) \\times j}$ (upper Hessenberg matrix)\n",
+    "$\\mathbf{\\overline{H}}_j \\in \\mathbb C^{(j+1) \\times j}$ (upper Hessenberg matrix)\n",
     "\n",
-    "$\\boldsymbol{\\overline{V}}_j \\in \\mathbb C^{n \\times j}$ (matrix with orthonormal columns)\n",
+    "$\\mathbf{\\overline{V}}_j \\in \\mathbb C^{n \\times j}$ (matrix with orthonormal columns)\n",
     "\n",
-    "$\\boldsymbol x_0 := $  initial approximation to the solution (maybe random)\n",
+    "$\\mathbf x_0 := $  initial approximation to the solution (maybe random)\n",
     "\n",
-    "$\\boldsymbol r_0 = b - \\boldsymbol A \\boldsymbol x_0 := $  initial residual\n",
+    "$\\mathbf r_0 = b - \\mathbf A \\mathbf x_0 := $  initial residual\n",
     "\n",
-    "$\\boldsymbol x_j = \\boldsymbol x_0 + \\boldsymbol t_j$ @ iteration $j$, where $\\boldsymbol t_j \\in  \\mathcal{K}_j (\\boldsymbol A, \\boldsymbol r_0)$:\n",
+    "$\\mathbf x_j = \\mathbf x_0 + \\mathbf t_j$ @ iteration $j$, where $\\mathbf t_j \\in  \\mathcal{K}_j (\\mathbf A, \\mathbf r_0)$:\n",
     "\n",
-    "$\\boldsymbol t_j :=$ *correction*\n",
+    "$\\mathbf t_j :=$ *correction*\n",
     "\n",
-    "$\\mathcal{K}_j (\\boldsymbol A, \\boldsymbol r_0) := $ *search space*\n"
+    "$\\mathcal{K}_j (\\mathbf A, \\mathbf r_0) := $ *search space*\n"
    ]
   },
   {
@@ -53,15 +53,15 @@
    "source": [
     "### GMRES:\n",
     "\n",
-    "$\\boldsymbol b - \\boldsymbol A (\\boldsymbol x_0 + \\boldsymbol t_j) \\bot  \\boldsymbol A \\mathcal{K}_j (\\boldsymbol A, \\boldsymbol r_0)$\n",
+    "$\\mathbf b - \\mathbf A (\\mathbf x_0 + \\mathbf t_j) \\bot  \\mathbf A \\mathcal{K}_j (\\mathbf A, \\mathbf r_0)$\n",
     "\n",
-    "$\\boldsymbol t_j = \\underset{\\boldsymbol t \\in \\mathcal{K}_j (\\boldsymbol A, \\boldsymbol r_0)}{\\texttt{argmin}}  \\lVert \\boldsymbol b - \\boldsymbol A (\\boldsymbol x_0 + \\boldsymbol t) \\rVert \\rightarrow$ this is equivalent to solving a $(j+1) \\times j$ minimization problem: \n",
+    "$\\mathbf t_j = \\underset{\\mathbf t \\in \\mathcal{K}_j (\\mathbf A, \\mathbf r_0)}{\\texttt{argmin}}  \\lVert \\mathbf b - \\mathbf A (\\mathbf x_0 + \\mathbf t) \\rVert \\rightarrow$ this is equivalent to solving a $(j+1) \\times j$ minimization problem: \n",
     "\n",
-    "$\\boldsymbol y_j = \\underset{\\boldsymbol y \\in \\mathbb C^j}{\\texttt{argmin}}  \\left\\lVert \\overline{H}_j \\boldsymbol y - \\left\\lVert \\boldsymbol r_0 \\right\\rVert  \\mathbf e_1^{(j+1)} \\right\\rVert$ $\\rightarrow$ $\\boldsymbol x_j = \\boldsymbol x_0 + \\boldsymbol V_j \\boldsymbol y_j$\n",
+    "$\\mathbf y_j = \\underset{\\mathbf y \\in \\mathbb C^j}{\\texttt{argmin}}  \\left\\lVert \\overline{H}_j \\mathbf y - \\left\\lVert \\mathbf r_0 \\right\\rVert  \\mathbf e_1^{(j+1)} \\right\\rVert$ $\\rightarrow$ $\\mathbf x_j = \\mathbf x_0 + \\mathbf V_j \\mathbf y_j$\n",
     "\n",
     "where $\\mathbf e_J^{(i)} :=$ the $J$ th Cartisian basis vector in $\\mathbb C^i$\n",
     "\n",
-    "GMRES(m) = `restarted GMRES` : run an $m$ -step cycle of the GMRES method and compute and approximation $\\boldsymbol x_m$\n"
+    "GMRES(m) = `restarted GMRES` : run an $m$ -step cycle of the GMRES method and compute and approximation $\\mathbf x_m$\n"
    ]
   },
   {
@@ -70,9 +70,13 @@
    "source": [
     "### Full Orthogonalization Method (FOM)\n",
     "\n",
-    "$\\boldsymbol b - \\boldsymbol A (\\boldsymbol x_0 + \\boldsymbol t_j) \\bot  \\boldsymbol A \\mathcal{K}_j (\\boldsymbol A, \\boldsymbol r_0)$\n",
+    "$\\mathbf b - \\mathbf A (\\mathbf x_0 + \\mathbf t_j) \\bot  \\mathbf A \\mathcal{K}_j (\\mathbf A, \\mathbf r_0)$\n",
     "\n",
-    "which is equivalent to solving a $j \\times j$ linear system $\\boldsymbol H_j \\mathbf y_j = \\beta \\mathbf e_1^{(j)}$"
+    "which is equivalent to solving a $j \\times j$ linear system $\\mathbf H_j \\mathbf y_j = \\beta \\mathbf e_1^{(j)}$\n",
+    "\n",
+    "and where $\\mathbf H_j \\in \\mathbb C^{j \\times j}$ is obtained by deleting the last row of $\\mathbf{\\overline{H}}_j$\n",
+    "\n",
+    "FOM(m) = `restarted FOM`"
    ]
   },
   {
