--- a/prelim.ipynb
+++ b/prelim.ipynb
@@ -14,7 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Krylov subspace methods\n",
+    "## Krylov subspace methods\n",
     "\n",
     "### Krylov subspace for unshifted system\n",
     "\n",
@@ -77,6 +77,23 @@
     "and where $\\mathbf H_j \\in \\mathbb C^{j \\times j}$ is obtained by deleting the last row of $\\mathbf{\\overline{H}}_j$\n",
     "\n",
     "FOM(m) = `restarted FOM`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "Note!\n",
+    "The focus of the paper is the augmentation techniques, Subspace recycling with GMRES (rGMRES or GCRO-DR)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Recycling GMRES [44]\n",
+    "\n"
    ]
   },
   {
