--- a/impl.ipynb
+++ b/impl.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,61 +61,59 @@
     "#_______________________#\n",
     "# LHS\n",
     "#   A\n",
-    "λ =  [i+10 for i in 1:n]\n",
+    "λ = [i+10 for i in 1:n]\n",
     "a = randn(n, n)\n",
     "A = UpperTriangular(a) - diagm(diag(a)) + diagm(λ)\n",
     "#   Shift\n",
-    "σ =  rand(1:9, L)\n",
-    "D = diagm(σ)\n",
-    "#   X_σ \n",
-    "X_σ = zeros(n, L) \n",
+    "σ = rand(1:9, L)\n",
+    "D = diagm(σ) \n",
     "# RHS\n",
     "B = randn(n, L);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "R = zeros(M, L)\n",
-    "for l=1:L\n",
-    "    lhs = A - D[l, l]*I\n",
-    "    b = B[:, l]\n",
-    "    Q, H = arnoldi(lhs, b, M)\n",
-    "    for m in 1:M\n",
-    "        s = vcat(norm(b), zeros(m, 1))\n",
-    "        z = H[1:m+1, 1:m] \\ s\n",
-    "        x = Q[:, 1:m] * z\n",
-    "        R[m, l] = norm(b - lhs*x)\n",
-    "        X_σ[:, l] = x\n",
-    "    end\n",
-    "end"
+    "# Initialize\n",
+    "X_σ     = zeros(n, L) \n",
+    "X_exact = zeros(n, L)\n",
+    "Res     = zeros(M, L);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4-element Vector{Float64}:\n",
-       " 1.4600722544352963e-9\n",
-       " 1.091110085982547e-8\n",
-       " 7.939020655220514e-9\n",
-       " 1.3401529795477136e-6"
+       "1.7730278037474004e-6"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "R[end, :]"
+    "for l=1:L\n",
+    "    lhs = A - D[l, l]*I\n",
+    "    b = B[:, l]\n",
+    "    X_exact[:, l] = lhs \\ b\n",
+    "    Q, H = arnoldi(lhs, b, M)\n",
+    "    for m in 1:M\n",
+    "        s = vcat(norm(b), zeros(m, 1))\n",
+    "        z = H[1:m+1, 1:m] \\ s\n",
+    "        x = Q[:, 1:m] * z\n",
+    "        Res[m, l] = norm(b - lhs*x)\n",
+    "        X_σ[:, l] = x\n",
+    "    end\n",
+    "end\n",
+    "norm(X_exact - X_σ)"
    ]
   },
   {
