fix QR fact in the notebook

--- a/implementation/arnoldi-block.ipynb
+++ b/implementation/arnoldi-block.ipynb
@@ -2,18 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "using LinearAlgebra\n",
-    "using SparseArrays\n",
-    "using Plots"
+    "using SparseArrays"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +57,7 @@
        "bArnoldi (generic function with 1 method)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +82,9 @@
     "            W -= U[:, iterI] * H[iterI, iterJ]\n",
     "        end\n",
     "        iterJp1 = iter(j+1, p)\n",
-    "        U[:, iterJp1], H[iterJp1, iterJ] = qr(W)\n",
+    "        Q, R  = qr(W)\n",
+    "        U[:, iterJp1] = Q[:, 1:p]\n",
+    "        H[iterJp1, iterJ] = R\n",
     "    end\n",
     "    U, H\n",
     "end"
@@ -91,36 +92,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "DimensionMismatch(\"tried to assign 6×6 array to 6×2 destination\")",
-     "output_type": "error",
-     "traceback": [
-      "DimensionMismatch(\"tried to assign 6×6 array to 6×2 destination\")",
-      "",
-      "Stacktrace:",
-      " [1] throw_setindex_mismatch(X::LinearAlgebra.QRCompactWYQ{Float64, Matrix{Float64}}, I::Tuple{Int64, Int64})",
-      "   @ Base ./indices.jl:193",
-      " [2] setindex_shape_check",
-      "   @ ./indices.jl:253 [inlined]",
-      " [3] _unsafe_setindex!(::IndexLinear, ::Matrix{Float64}, ::LinearAlgebra.QRCompactWYQ{Float64, Matrix{Float64}}, ::Base.Slice{Base.OneTo{Int64}}, ::UnitRange{Int64})",
-      "   @ Base ./multidimensional.jl:896",
-      " [4] _setindex!",
-      "   @ ./multidimensional.jl:887 [inlined]",
-      " [5] setindex!",
-      "   @ ./abstractarray.jl:1267 [inlined]",
-      " [6] bArnoldi(A::Matrix{Float64}, X0::Matrix{Float64}, m::Int64, p::Int64)",
-      "   @ Main ./In[4]:20",
-      " [7] top-level scope",
-      "   @ In[5]:1",
-      " [8] eval",
-      "   @ ./boot.jl:360 [inlined]",
-      " [9] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "   @ Base ./loading.jl:1116"
-     ]
+     "data": {
+      "text/plain": [
+       "([-0.7493558369292218 -0.0885312695187261 … -0.153728919508471 0.10851458369086342; -0.22182009918222256 0.13958406222142467 … 0.3807677309760626 -0.1809152467477373; … ; 0.3224606929934708 0.7069480844233842 … -0.348886069167206 0.5115670039388627; 0.2575658240294458 -0.6347564087477443 … 0.6086520899994038 0.4463937962003504], [10.939174015783495 2.3203391244088265 … 2.808034259803625 8.414895203403393; -0.1390424123675338 16.759187781407377 … 14.36227323589153 -1.5544989957850832; … ; 0.0 0.0 … 5.659942381411821 0.7144799350002932; 0.0 0.0 … 0.0 0.5677600294127558])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -137,15 +120,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.6.2",
+   "display_name": "Julia 1.8.0",
    "language": "julia",
-   "name": "julia-1.6"
+   "name": "julia-1.8"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.2"
+   "version": "1.8.0"
   },
   "orig_nbformat": 4,
   "vscode": {
