--- a/implementation/test.ipynb
+++ b/implementation/test.ipynb
@@ -4,23 +4,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "bArnoldi (generic function with 1 method)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "using LinearAlgebra\n",
-    "using SparseArrays\n",
-    "include(\"arnoldi.jl\")\n",
-    "include(\"bArnoldi.jl\")"
+    "using SparseArrays"
    ]
   },
   {
@@ -43,6 +30,7 @@
     "#   Shift\n",
     "σ = rand(1:9, L)\n",
     "D = diagm(σ) \n",
+    "Γ = .7\n",
     "# RHS\n",
     "B = randn(n, L);"
    ]
@@ -61,11 +49,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0001357113382803524"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "include(\"arnoldi.jl\")\n",
+    "for l=1:L\n",
+    "    lhs = A - D[l, l]*I\n",
+    "    b = B[:, l]\n",
+    "    X_exact[:, l] = lhs \\ b\n",
+    "    Q, H = arnoldi(lhs, b, M)\n",
+    "    for m in 1:M\n",
+    "        s = vcat(norm(b), zeros(m, 1))\n",
+    "        z = H[1:m+1, 1:m] \\ s\n",
+    "        x = Q[:, 1:m] * z\n",
+    "        Res[m, l] = norm(b - lhs*x)\n",
+    "        X_σ[:, l] = x\n",
+    "    end\n",
+    "end\n",
+    "norm(X_exact - X_σ)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bArnoldi(A, B, M, L);"
+    "include(\"bArnoldi.jl\")\n",
+    "W, H = bArnoldi(A, B, M, L);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "H_σ = H + Γ * vcat(Matrix(I, L*M, L*M), zeros(L, L*M));"
    ]
   },
   {
