arnoldi-naive: smaller size and report norm

--- a/implementation/arnoldi-naive.ipynb
+++ b/implementation/arnoldi-naive.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
        "arnoldi (generic function with 1 method)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,13 +49,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 1000\n",
-    "M = 300\n",
-    "L = 20\n",
+    "n = 100\n",
+    "M = 30\n",
+    "L = 4\n",
     "#^^^^^^^^^^^^^^^^^^^^^^^#\n",
     "#  A*X_σ - X_σ * D = B  #\n",
     "#_______________________#\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,16 +85,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "norm(lhs * Q[:, 1:M] - Q * H) = 1.1392399823726584e-13\n",
+      "norm(lhs * Q[:, 1:M] - Q * H) = 9.924748973585697e-14\n",
+      "norm(lhs * Q[:, 1:M] - Q * H) = 1.1883847619752125e-13\n",
+      "norm(lhs * Q[:, 1:M] - Q * H) = 1.0636450446624943e-13\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "5.059904458542247e-14"
+       "3.507996046372993e-5"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,6 +115,7 @@
     "    b = B[:, l]\n",
     "    X_exact[:, l] = lhs \\ b\n",
     "    Q, H = arnoldi(lhs, b, M)\n",
+    "    @show norm(lhs*Q[:, 1:M] - Q*H)\n",
     "    for m in 1:M\n",
     "        s = vcat(norm(b), zeros(m, 1))\n",
     "        z = H[1:m+1, 1:m] \\ s\n",
@@ -126,15 +137,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.6.2",
+   "display_name": "Julia 1.8.0",
    "language": "julia",
-   "name": "julia-1.6"
+   "name": "julia-1.8"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.2"
+   "version": "1.8.0"
   },
   "orig_nbformat": 4,
   "vscode": {
