naive arnoldi: add some comments

--- a/implementation/arnoldi-naive.ipynb
+++ b/implementation/arnoldi-naive.ipynb
@@ -2,18 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "using LinearAlgebra\n",
-    "using SparseArrays\n",
-    "using Plots"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -22,34 +11,21 @@
        "arnoldi (generic function with 1 method)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Arnoldi process\n",
-    "function arnoldi(A, u, m)\n",
-    "    n = size(A, 1)\n",
-    "    Q = zeros(n, m+1)\n",
-    "    H = zeros(m+1, m)\n",
-    "    Q[:, 1] = u / norm(u)\n",
-    "    for j in 1:m\n",
-    "        v = A*Q[:, j]\n",
-    "        for i in 1:j\n",
-    "            H[i, j] = Q[:, i]' * v\n",
-    "            v -= H[i, j] * Q[:, i]\n",
-    "        end\n",
-    "        H[j+1, j] = norm(v)\n",
-    "        Q[:, j+1] = v / H[j+1, j]\n",
-    "    end\n",
-    "    Q, H\n",
-    "end"
+    "using LinearAlgebra\n",
+    "using SparseArrays\n",
+    "using Plots\n",
+    "include(\"arnoldi.jl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,31 +61,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "norm(lhs * Q[:, 1:M] - Q * H) = 1.1392399823726584e-13\n",
-      "norm(lhs * Q[:, 1:M] - Q * H) = 9.924748973585697e-14\n",
-      "norm(lhs * Q[:, 1:M] - Q * H) = 1.1883847619752125e-13\n",
-      "norm(lhs * Q[:, 1:M] - Q * H) = 1.0636450446624943e-13\n"
+      "norm(lhs * Q[:, 1:M] - Q * H) = 1.024259293270996e-13\n",
+      "norm(lhs * Q[:, 1:M] - Q * H) = 1.0939229429435777e-13\n",
+      "norm(lhs * Q[:, 1:M] - Q * H) = 1.1153827680532373e-13\n",
+      "norm(lhs * Q[:, 1:M] - Q * H) = 1.0963209394621552e-13\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "3.507996046372993e-5"
+       "5.557158435166617e-6"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# [A](nxn) x = b\n",
+    "# [Q](n x m+1) = [q1 q2 ... q(m+1)], q1 = normalized b\n",
+    "# [H](m+1 x m): upper Hessenberg\n",
+    "# A Q_m = Q H , [Q_m](nxm) = [q1 q2 ... qm]\n",
+    "# x = Q_m z\n",
+    "# A Q_m z = b = Q H z\n",
+    "# Q' b = Q' Q H z => H z = Q' b = s => z = H \\ s => x = Q_m z\n",
     "for l=1:L\n",
     "    lhs = A - D[l, l]*I\n",
     "    b = B[:, l]\n",
@@ -117,9 +100,10 @@
     "    Q, H = arnoldi(lhs, b, M)\n",
     "    @show norm(lhs*Q[:, 1:M] - Q*H)\n",
     "    for m in 1:M\n",
-    "        s = vcat(norm(b), zeros(m, 1))\n",
-    "        z = H[1:m+1, 1:m] \\ s\n",
-    "        x = Q[:, 1:m] * z\n",
+    "        s = vcat(norm(b), zeros(m, 1)) # s = Q' b\n",
+    "        z = H[1:m+1, 1:m] \\ s          # z = H \\ s\n",
+    "        x = Q[:, 1:m] * z              # x = Q_m z\n",
+    "        # Populate results\n",
     "        Res[m, l] = norm(b - lhs*x)\n",
     "        X_σ[:, l] = x\n",
     "    end\n",
