--- a/implementation/bArnoldi.ipynb
+++ b/implementation/bArnoldi.ipynb
@@ -2,23 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "arnoldi (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "using LinearAlgebra\n",
-    "using SparseArrays"
+    "using SparseArrays\n",
+    "include(\"bArnoldi.jl\")\n",
+    "include(\"arnoldi.jl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 6\n",
-    "M = 3\n",
-    "L = 2\n",
+    "n = 100\n",
+    "M = 30\n",
+    "L = 4\n",
     "#^^^^^^^^^^^^^^^^^^^^^^^#\n",
     "#  A*X_σ - X_σ * D = B  #\n",
     "#_______________________#\n",
@@ -37,67 +50,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize\n",
-    "X_σ     = zeros(n, L) \n",
     "X_exact = zeros(n, L)\n",
-    "Res     = zeros(M, L);"
+    "for l=1:L\n",
+    "    lhs = A # - D[l, l]*I\n",
+    "    b = B[:, l]\n",
+    "    X_exact[:, l] = lhs \\ b\n",
+    "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0001357113382803524"
+       "2.98643869898858e-9"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "include(\"arnoldi.jl\")\n",
+    "# Naive: Standard Arnoldi in a for-loop\n",
+    "X_σ_naive = zeros(n, L) \n",
     "for l=1:L\n",
-    "    lhs = A - D[l, l]*I\n",
+    "    lhs = A # - D[l, l]*I\n",
     "    b = B[:, l]\n",
-    "    X_exact[:, l] = lhs \\ b\n",
     "    Q, H = arnoldi(lhs, b, M)\n",
     "    for m in 1:M\n",
     "        s = vcat(norm(b), zeros(m, 1))\n",
     "        z = H[1:m+1, 1:m] \\ s\n",
     "        x = Q[:, 1:m] * z\n",
-    "        Res[m, l] = norm(b - lhs*x)\n",
-    "        X_σ[:, l] = x\n",
+    "        X_σ_naive[:, l] = x\n",
     "    end\n",
     "end\n",
-    "norm(X_exact - X_σ)"
+    "norm(X_exact - X_σ_naive)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "include(\"bArnoldi.jl\")\n",
-    "W, H = bArnoldi(A, B, M, L);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "H_σ = H + Γ * vcat(Matrix(I, L*M, L*M), zeros(L, L*M));"
+    "# Block Arnoldi\n",
+    "X_σ = zeros(n, L) \n",
+    "Res = zeros(n, L)\n",
+    "W, H = bArnoldi(A, B, M)\n",
+    "for m in 1:M\n",
+    "    # TODO\n",
+    "end"
    ]
   },
   {
