--- a/implementation/bArnoldi.ipynb
+++ b/implementation/bArnoldi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -11,9 +11,8 @@
        "arnoldi (generic function with 1 method)"
       ]
      },
-     "execution_count": 12,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -25,13 +24,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 100\n",
-    "M = 30\n",
-    "L = 4\n",
+    "n = 10\n",
+    "M = 3\n",
+    "L = 2\n",
     "#^^^^^^^^^^^^^^^^^^^^^^^#\n",
     "#  A*X_σ - X_σ * D = B  #\n",
     "#_______________________#\n",
@@ -50,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,18 +63,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.98643869898858e-9"
+       "0.0011250872790743098"
       ]
      },
-     "execution_count": 15,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -97,22 +95,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "norm(A * W[:, 1:M * L] - W * H) = 4.268339196329169e-15\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "4.268339196329169e-15"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Block Arnoldi\n",
     "X_σ = zeros(n, L) \n",
     "Res = zeros(n, L)\n",
     "W, H = bArnoldi(A, B, M)\n",
-    "for m in 1:M\n",
-    "    # TODO\n",
-    "end"
+    "@show norm(A*W[:,1:M*L] - W*H)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "1\n",
+      "(size(H[1:L * m, 1:L * m]), size(z), size(s)) = ((2, 2), (2, 2), (2, 2))\n",
+      "size(x) = (10, 2)\n",
+      "\n",
+      "2\n",
+      "(size(H[1:L * m, 1:L * m]), size(z), size(s)) = ((4, 4), (4, 2), (4, 2))\n",
+      "size(x) = (10, 2)\n",
+      "\n",
+      "3\n",
+      "(size(H[1:L * m, 1:L * m]), size(z), size(s)) = ((6, 6), (6, 2), (6, 2))\n",
+      "size(x) = (10, 2)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.0008247865458325761"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "f = qr(B)\n",
+    "for m in 1:M\n",
+    "\n",
+    "    print(\"\\n\")\n",
+    "    print(m)\n",
+    "    print(\"\\n\")\n",
+    "\n",
+    "    #s = vcat(f.Q[:, 1:m*L]' * B, zeros(m*L, L))            # s = Q' B\n",
+    "    s = f.Q[:, 1:m*L]' * B\n",
+    "    z = H[1:L*m, 1:L*m] \\ s      # z = H \\ s\n",
+    "    x = W[:, 1:L*m] * z              # x = Q_m z\n",
+    "\n",
+    "    @show size(H[1:L*m, 1:L*m]), size(z), size(s)\n",
+    "    @show size(x)\n",
+    "    # Populate results\n",
+    "    #Res[m, :] = norm(B - A*x)\n",
+    "    \n",
+    "    X_σ = x\n",
+    "end\n",
+    "norm(X_exact - X_σ)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": []
