bArnoldi is correctly solving random linear systems (not shifted)

--- a/implementation/bArnoldi.ipynb
+++ b/implementation/bArnoldi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -24,13 +24,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 10\n",
-    "M = 3\n",
-    "L = 2\n",
+    "n = 100\n",
+    "M = 25\n",
+    "L = 4\n",
     "#^^^^^^^^^^^^^^^^^^^^^^^#\n",
     "#  A*X_σ - X_σ * D = B  #\n",
     "#_______________________#\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,19 +63,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0011250872790743098"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Naive: Standard Arnoldi in a for-loop\n",
     "X_σ_naive = zeros(n, L) \n",
@@ -83,32 +73,31 @@
     "    lhs = A # - D[l, l]*I\n",
     "    b = B[:, l]\n",
     "    Q, H = arnoldi(lhs, b, M)\n",
-    "    for m in 1:M\n",
-    "        s = vcat(norm(b), zeros(m, 1))\n",
-    "        z = H[1:m+1, 1:m] \\ s\n",
+    "    for m in 1:M                         # Changed the following to be consistent with bArnoldi and gives smaller norms\n",
+    "        s = vcat(norm(b), zeros(m-1, 1)) #   size m+1 -> m\n",
+    "        z = H[1:m, 1:m] \\ s              #   H[1:m+1, 1:m] -> H[1:m, 1:m]\n",
     "        x = Q[:, 1:m] * z\n",
     "        X_σ_naive[:, l] = x\n",
     "    end\n",
-    "end\n",
-    "norm(X_exact - X_σ_naive)"
+    "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "norm(A * W[:, 1:M * L] - W * H) = 4.268339196329169e-15\n"
+      "norm(A * W[:, 1:M * L] - W * H) = 1.3801893629678739e-13\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "4.268339196329169e-15"
+       "1.3801893629678739e-13"
       ]
      },
      "metadata": {},
@@ -119,37 +108,67 @@
     "# Block Arnoldi\n",
     "X_σ = zeros(n, L) \n",
     "Res = zeros(n, L)\n",
-    "W, H = bArnoldi(A, B, M)\n",
+    "W, H = bArnoldi(A, B, M);\n",
     "@show norm(A*W[:,1:M*L] - W*H)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "1\n",
-      "(size(H[1:L * m, 1:L * m]), size(z), size(s)) = ((2, 2), (2, 2), (2, 2))\n",
-      "size(x) = (10, 2)\n",
-      "\n",
-      "2\n",
-      "(size(H[1:L * m, 1:L * m]), size(z), size(s)) = ((4, 4), (4, 2), (4, 2))\n",
-      "size(x) = (10, 2)\n",
-      "\n",
-      "3\n",
-      "(size(H[1:L * m, 1:L * m]), size(z), size(s)) = ((6, 6), (6, 2), (6, 2))\n",
-      "size(x) = (10, 2)\n"
+      "step 1 \n",
+      "step 2 \n",
+      "step 3 \n",
+      "step 4 \n",
+      "step 5 \n",
+      "step 6 \n",
+      "step 7 \n",
+      "step 8 \n",
+      "step 9 \n",
+      "step 10 \n",
+      "step 11 \n",
+      "step 12 \n",
+      "step 13 \n",
+      "step 14 \n",
+      "step 15 \n",
+      "step 16 \n",
+      "step 17 \n",
+      "step 18 \n",
+      "step 19 \n",
+      "step 20 \n",
+      "step 21 \n",
+      "step 22 \n",
+      "step 23 \n",
+      "step 24 \n",
+      "step 25 \n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "f = qr(B)\n",
+    "for m in 1:M\n",
+    "    print(\"step $m \\n\")\n",
+    "    s = f.Q[:, 1:m*L]' * B   # s = Q' B\n",
+    "    z = H[1:L*m, 1:L*m] \\ s  # z = H \\ s\n",
+    "    x = W[:, 1:L*m] * z      # x = Q_m z    \n",
+    "    X_σ = x\n",
+    "end\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0008247865458325761"
+       "(7.863707977313785e-8, 6.679043894708744e-16, 7.863707972297876e-8)"
       ]
      },
      "metadata": {},
@@ -157,31 +176,12 @@
     }
    ],
    "source": [
-    "f = qr(B)\n",
-    "for m in 1:M\n",
-    "\n",
-    "    print(\"\\n\")\n",
-    "    print(m)\n",
-    "    print(\"\\n\")\n",
-    "\n",
-    "    #s = vcat(f.Q[:, 1:m*L]' * B, zeros(m*L, L))            # s = Q' B\n",
-    "    s = f.Q[:, 1:m*L]' * B\n",
-    "    z = H[1:L*m, 1:L*m] \\ s      # z = H \\ s\n",
-    "    x = W[:, 1:L*m] * z              # x = Q_m z\n",
-    "\n",
-    "    @show size(H[1:L*m, 1:L*m]), size(z), size(s)\n",
-    "    @show size(x)\n",
-    "    # Populate results\n",
-    "    #Res[m, :] = norm(B - A*x)\n",
-    "    \n",
-    "    X_σ = x\n",
-    "end\n",
-    "norm(X_exact - X_σ)"
+    "norm(X_σ - X_σ_naive), norm(X_exact - X_σ), norm(X_exact - X_σ_naive)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": []
