bArnoldi: required condition for now

--- a/implementation/bArnoldi.ipynb
+++ b/implementation/bArnoldi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -24,13 +24,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "n = 100\n",
+    "M = 30\n",
+    "L = 3\n",
+    "# We need this condition for now\n",
+    "M * L <= n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 100\n",
-    "M = 25\n",
-    "L = 4\n",
     "#^^^^^^^^^^^^^^^^^^^^^^^#\n",
     "#  A*X_σ - X_σ * D = B  #\n",
     "#_______________________#\n",
@@ -49,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,20 +104,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "norm(A * W[:, 1:M * L] - W * H) = 1.3801893629678739e-13\n"
+      "norm(A * W[:, 1:M * L] - W * H) = 1.6296131988461574e-13\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "1.3801893629678739e-13"
+       "1.6296131988461574e-13"
       ]
      },
      "metadata": {},
@@ -114,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +165,12 @@
       "step 22 \n",
       "step 23 \n",
       "step 24 \n",
-      "step 25 \n"
+      "step 25 \n",
+      "step 26 \n",
+      "step 27 \n",
+      "step 28 \n",
+      "step 29 \n",
+      "step 30 \n"
      ]
     }
    ],
@@ -162,13 +187,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(7.863707977313785e-8, 6.679043894708744e-16, 7.863707972297876e-8)"
+       "(1.6765580745931078e-9, 3.5324783623043346e-13, 1.676558546979575e-9)"
       ]
      },
      "metadata": {},
@@ -181,7 +206,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": []
