bArnoldi: report time

--- a/implementation/bArnoldi.ipynb
+++ b/implementation/bArnoldi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,41 +83,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Naive: Standard Arnoldi in a for-loop\n",
-    "X_σ_naive = zeros(n, L) \n",
-    "for l=1:L\n",
-    "    lhs = A # - D[l, l]*I\n",
-    "    b = B[:, l]\n",
-    "    Q, H = arnoldi(lhs, b, M)\n",
-    "    for m in 1:M                         # Changed the following to be consistent with bArnoldi and gives smaller norms\n",
-    "        s = vcat(norm(b), zeros(m-1, 1)) #   size m+1 -> m\n",
-    "        z = H[1:m, 1:m] \\ s              #   H[1:m+1, 1:m] -> H[1:m, 1:m]\n",
-    "        x = Q[:, 1:m] * z\n",
-    "        X_σ_naive[:, l] = x\n",
-    "    end\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "norm(A * W[:, 1:M * L] - W * H) = 1.6296131988461574e-13\n"
+      "  0.068229 seconds (56.07 k allocations: 9.147 MiB, 93.02% compilation time)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Naive: Standard Arnoldi in a for-loop\n",
+    "X_σ_naive = zeros(n, L) \n",
+    "@time begin\n",
+    "    for l=1:L\n",
+    "        #print(\"\\nsystem $l \\n\")\n",
+    "        lhs = A # - D[l, l]*I\n",
+    "        b = B[:, l]\n",
+    "        Q, H = arnoldi(lhs, b, M)\n",
+    "        for m in 1:M # Changed the following to be consistent with bArnoldi and gives smaller norms\n",
+    "            #print(\"m$m\\t\")\n",
+    "            s = vcat(norm(b), zeros(m-1, 1)) #   size m+1 -> m\n",
+    "            z = H[1:m, 1:m] \\ s              #   H[1:m+1, 1:m] -> H[1:m, 1:m]\n",
+    "            x = Q[:, 1:m] * z\n",
+    "            X_σ_naive[:, l] = x\n",
+    "        end\n",
+    "        #print(\"\\n\\n\")\n",
+    "    end\n",
+    "end # time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "norm(A * W[:, 1:M * L] - W * H) = 1.5636623172858418e-13\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "1.6296131988461574e-13"
+       "1.5636623172858418e-13"
       ]
      },
      "metadata": {},
@@ -134,66 +147,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step 1 \n",
-      "step 2 \n",
-      "step 3 \n",
-      "step 4 \n",
-      "step 5 \n",
-      "step 6 \n",
-      "step 7 \n",
-      "step 8 \n",
-      "step 9 \n",
-      "step 10 \n",
-      "step 11 \n",
-      "step 12 \n",
-      "step 13 \n",
-      "step 14 \n",
-      "step 15 \n",
-      "step 16 \n",
-      "step 17 \n",
-      "step 18 \n",
-      "step 19 \n",
-      "step 20 \n",
-      "step 21 \n",
-      "step 22 \n",
-      "step 23 \n",
-      "step 24 \n",
-      "step 25 \n",
-      "step 26 \n",
-      "step 27 \n",
-      "step 28 \n",
-      "step 29 \n",
-      "step 30 \n"
+      "  0.002228 seconds (803 allocations: 5.972 MiB)\n"
      ]
     }
    ],
    "source": [
-    "f = qr(B)\n",
-    "for m in 1:M\n",
-    "    print(\"step $m \\n\")\n",
-    "    s = f.Q[:, 1:m*L]' * B   # s = Q' B\n",
-    "    z = H[1:L*m, 1:L*m] \\ s  # z = H \\ s\n",
-    "    x = W[:, 1:L*m] * z      # x = W_m z    \n",
-    "    X_σ = x\n",
-    "end\n"
+    "@time begin\n",
+    "    f = qr(B)\n",
+    "    for m in 1:M\n",
+    "        #print(\"m$m\\t\")\n",
+    "        s = f.Q[:, 1:m*L]' * B   # s = Q' B\n",
+    "        z = H[1:L*m, 1:L*m] \\ s  # z = H \\ s\n",
+    "        x = W[:, 1:L*m] * z      # x = W_m z    \n",
+    "        X_σ = x\n",
+    "    end\n",
+    "    #print(\"\\n\")\n",
+    "end # time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1.6765580745931078e-9, 3.5324783623043346e-13, 1.676558546979575e-9)"
+       "(1.4644780241082843e-9, 3.085512983724735e-13, 1.4644803410641835e-9)"
       ]
      },
      "metadata": {},
@@ -206,14 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": []
